--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Nick Amantia Portfolio" />
     <title>Nick Amantia</title>
-    <link rel="icon" href="images/leaf.png" />
+    <link rel="icon" href="leaf.png" />
     <link rel="stylesheet" href="./style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -26,12 +26,11 @@
         <a href="#"
           ><img
             class="self-photo"
-            src="./images/headshot.png"
+            src="headshot.png"
             alt="Nick Amantia Headshot"
         /></a>
       </div>
       <div class="nav">
-        <a class="nav-link" href="#about">About</a>
         <a class="nav-link" href="#contact">Contact</a>
         <a
           class="nav-link resume"
@@ -50,24 +49,13 @@
           <h2 class="name">Nick Amantia</h2>
 
           <h3 class="info">
-            I’m currently working at Power Home Remodeling as a Software Engineer working on thier design system, collaborative file managment systen, and other intrernal tools.
+            I am currently employed at Power Home Remodeling as a Software Engineer, where I have the incredible opportunity to contribute to their design system, collaborative file management system, and various other internal tools. It's a fascinating and rewarding journey as I get to combine my passion for technology with my creativity to enhance the user experience. I take pride in being part of a team that values innovation and strives for excellence in every aspect of our work.
           </h3>
         </div>
       </section>
 
       <section class="section">
         <div class="page-container margin-top">
-          <h2 class="section-title" id="about">About Me</h2>
-          <p class="section-info">
-            I’m a Software Engineer from New Jersey with a passion for creating web
-            apps and learning new technologies. I love solving difficult
-            problems and challenging myself. I started my technology career
-            focused on hardware and system implementations but the creative side
-            of me needed more. Being an engineer has given me an avenue to
-            funnel my creative ideas to solve problems. When I'm not coding, I'm
-            usually in the garden or greenhouse tending to my plants.
-          </p>
-
           <h2 class="section-info">
             Here a few technologies that I currently use:
           </h2>
