--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <section class="section">
         <div class="page-container margin-top">
           <h2 class="section-info">
-            Here a few technologies that I currently use:
+            Here are a few technologies that I currently use:
           </h2>
           <div class="tech-logos">
             <p>
@@ -160,8 +160,8 @@
         <div class="page-container">
           <h2 class="section-title" id="contact">Contact</h2>
           <p class="section-info">
-            Thanks for stoping by! <span class="employment"
-              >Heres where you can find me:</span
+            Thanks for stopping by! <span class="employment"
+              >Here's where you can find me:</span
             >
           </p>
 
